  new option relay.network.websocket_allowed_origins
* relay: add options "buffers" and "upgrade" for commands sync/desync in weechat
  protocol
* relay: fix commands sync/desync in weechat protocol (bug #38215)
* rmodifier: rename default rmodifier "nickserv" to "command_auth" (with new
  modifier "irc_command_auth"), add default rmodifier "message_auth" (modifier
  "irc_message_auth")
* script: create "script" directory on each action, just in case it has been
  removed (bug #38472)
* script: add option script.scripts.autoload, add options "autoload",
  "noautoload" and "toggleautoload" for command /script, add action "A" (meta-A)
  on script buffer (toggle autoload) (task #12393)
* scripts: create directories (language and language/autoload) on each action
  (install/remove/autoload), just in case they have been removed (bug #38473)
* scripts: do not allow empty script name in function "register"
* xfer: fix freeze of DCC file received: use non-blocking socket after
  connection to sender and ensure the ACK is properly sent (bug #38340)

Version 0.4.0 (2013-01-20)
--------------------------

* core: fix infinite loop when a regex gives an empty match (bug #38112)
* core: fix detection of guile in configure
* core: fix click in item "buffer_nicklist" when nicklist is a root bar
  (bug #38080)
* core: fix line returned when clicking on a bar (according to position and
  filling) (bug #38069)
* core: fix refresh of bars when applying layout (bug #37944, bug #37952)
* core: add buffer pointer in arguments for signals "input_search",
  "input_text_changed" and "input_text_cursor_moved"
* core: fix scroll to bottom of window (default key: alt+end) when line
  displayed is bigger than chat area
* core: fix scroll in buffer after enabling/disabling some filters (if scroll
  is on a hidden line) (bug #37885)
* core: fix memory leak in case of error when building content of bar item for
  display