@@ -4405,6 +4405,12 @@ option5 = weechat.config_new_option(config_file, section, "option5", "color",
     "", "")
 ----------------------------------------
 
+[NOTE]
+En Ruby, les 3 "callbacks" + "data" (6 chaînes) doivent être données dans un
+tableau de 6 chaînes de caractères (en raison d'une limitation de Ruby à 15
+paramètres par fonction), voir le 'Guide pour Scripts WeeChat' pour plus d'infos
+(_corrigé dans la version 0.4.1_).
+
 weechat_config_search_option
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
