@@ -49,6 +49,16 @@ WeeChat (Wee Enhanced Environment for Chat) はフリー、高速、軽量な
 
 * 'weechat_init' を定義して、内部で 'register' を呼び出してください。
 * 関数は `Weechat.xxx(arg1, arg2, ...)` のように呼び出してください。
+// TRANSLATION MISSING
+* Due to a limitation of Ruby (15 arguments max by function), the function
+  `Weechat.config_new_option` receives the callbacks in an array of 6 strings
+  (3 callbacks + 3 data strings), so a call to this function looks like:
+
+[source,ruby]
+----------------------------------------
+Weechat.config_new_option(config, section, "name", "string", "description of option", "", 0, 0,
+                          "value", "value", 0, ["check_cb", "", "change_cb", "", "delete_cb", ""])
+----------------------------------------
 
 ==== Lua ====
 
